Update flatbuffers rules to allow includes.
Change-Id: I24dec21ce0fe472cd7cde77e883a9eabbb45b87a

--- a/flatbuffer.gni
+++ b/flatbuffer.gni
@@ -72,6 +72,9 @@ template("flatbuffer") {
     ]
 
     args = [
+      "-I",
+      rebase_path("//"),
+      "--no-includes",
       "-c",
       "-o",
       "$out_dir",
@@ -80,7 +83,7 @@ template("flatbuffer") {
 
     # The deps may have steps that have to run before running flatc.
     if (defined(invoker.deps)) {
-      deps += invoker.deps
+      deps = invoker.deps
     }
   }
 
